syntax = "proto3";

option csharp_namespace = "SyncronizationService.API";

package syncronizations;

service SyncLog {
	rpc GenerateLog(SyncLogRequest)
	returns (SyncLogReply);
}

message SyncLogRequest {
	string userId = 1;
	string groupId = 2;
	string startSyncronizationId = 3;
	string endSyncronizationId = 4;
}

message SyncLogReply {
	bool succeded = 1;
}